[tool.poetry]
name = "langchain-tutorials"
version = "0.1.0"
description = ""
authors = ["Jooeon Kim <joo2theeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.3"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
